force-app/main/default/objects/Contract__c/fields/AmendmentDescription__c.field-meta.xml
<CustomField>
    <fullName>AmendmentDescription__c</fullName>
    <label>Amendment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>