force-app/main/default/objects/Contract__c/fields/AmendmentSignedDate__c.field-meta.xml
<CustomField>
    <fullName>AmendmentSignedDate__c</fullName>
    <label>Amendment Signed Date</label>
    <type>Date</type>
</CustomField>