force-app/main/default/objects/Contract__c/fields/BillingNotes__c.field-meta.xml
<CustomField>
    <fullName>BillingNotes__c</fullName>
    <label>Billing notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>