force-app/main/default/objects/Contract__c/fields/BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to link to contract to the account</description>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>