force-app/main/default/objects/Contract__c/fields/ContractAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractAmount__c</fullName>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>