force-app/main/default/objects/Contract__c/fields/ContractDescription__c.field-meta.xml
<CustomField>
    <fullName>ContractDescription__c</fullName>
    <label>Contract Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>