force-app/main/default/objects/Contract__c/fields/ContractNotes__c.field-meta.xml
<CustomField>
    <fullName>ContractNotes__c</fullName>
    <label>Contract Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>