force-app/main/default/objects/Contract__c/fields/ContractSignedDate__c.field-meta.xml
<CustomField>
    <fullName>ContractSignedDate__c</fullName>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>