force-app/main/default/objects/Contract__c/fields/CustomOrganizationGTM__c.field-meta.xml
<CustomField>
    <fullName>CustomOrganizationGTM__c</fullName>
    <label>Custom Organization - GTM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>