force-app/main/default/objects/Contract__c/fields/WorkdayReferenceId__c.field-meta.xml
<CustomField>
    <fullName>WorkdayReferenceId__c</fullName>
    <label>Workday Reference ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>