force-app/main/default/objects/Contract__c/recordTypes/WorkdayContract.recordType-meta.xml
<RecordType>
    <fullName>WorkdayContract</fullName>
    <active>true</active>
    <description>Linked to the contracts sent by Workday</description>
    <label>Workday Contract</label>
</RecordType>