force-app/main/default/objects/Contract__c/validationRules/ValidateWorkdayReference.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateWorkdayReference</fullName>
    <active>true</active>
    <description>Validates if the value of the WorkdayReferenceId field matches the Opportunity Id format.</description>
    <errorConditionFormula>!REGEX(WorkdayReferenceId__c,&apos;^006[a-zA-Z0-9]{12}([a-zA-Z0-9]{3})?$&apos;)</errorConditionFormula>
    <errorDisplayField>WorkdayReferenceId__c</errorDisplayField>
    <errorMessage>Workday Reference Id field value should contain a valid Opportunity Id</errorMessage>
</ValidationRule>